compiler/tests-spec/testData/psi/templates/identifiers/stringTemplateElement.kt
fun f1() {
    val x1 = "$<!ELEMENT!>"

    val x2 = "..." + "...$<!ELEMENT!>..." + "..."

    var x3 = "$<!ELEMENT!>$<!ELEMENT!>$<!ELEMENT!>"
}
